@@ -276,8 +276,7 @@ EndOfLineComment = "//" {InputCharacter}* {LineTerminator}?
   "."             { return newSymbol(Terminals.DOT); }
   ","             { return newSymbol(Terminals.COMMA); }
 
-  "+"             { addFormattingInformation(FormattingType.NON_BREAKING_WHITESPACE, yytext());
-                    return newSymbol(Terminals.PLUS); }  
+  "+"             { return newSymbol(Terminals.PLUS); }
   "-"             { return newSymbol(Terminals.MINUS); }
   "*"             { return newSymbol(Terminals.MULT); }
   "/"             { return newSymbol(Terminals.DIV); }
