@@ -459,8 +459,9 @@ ExternalLanguage external_language =
 	;	
 	
 Annotation annotation_sc =
-	annotation SEMICOLON {: return annotation; :}
-   	;
+    annotation SEMICOLON {: formattingRecorder.addItem(FormattingType.VISIBILITY_INFO, ";", SEMICOLON);
+                            return annotation; :}
+    ;
 
 ExternalFunctionCall external_function_call =
 	parse_access EQUALS id_decl LPAREN arg_list RPAREN  
@@ -1116,7 +1117,8 @@ Exp relation =
 Exp unary_exp =
    pow_exp          {: return pow_exp; :}
    | MINUS unary_exp       {: return new NegExp(unary_exp); :}
-   | PLUS unary_exp        {: return unary_exp; :}
+   | PLUS unary_exp        {: formattingRecorder.addItem(FormattingType.NON_BREAKING_WHITESPACE, "+", PLUS);
+                              return unary_exp; :}
    ;
 
 Exp pow_exp =
