@@ -24,7 +24,7 @@ import os
 
 from pymodelica.compiler import compile_fmu
 from pyfmi.fmi import load_fmu, FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2
-from pyjmi.common.io import ResultDymolaTextual
+from pyjmi.common.io import ResultDymolaTextual, ResultDymolaBinary
 from tests_jmodelica import get_files_path
 
 _model_name = ''
@@ -72,8 +72,8 @@ class _BaseSimOptTest:
         Run simulation and load result. 
         Call this from setUp() or within a test depending if all tests should run simulation.
         """
-        self._run_and_write_data(cvode_options)
-        self.data = ResultDymolaTextual(self.model_name[:-len('.fmu')] + '_result.txt')
+        res = self._run_and_write_data(cvode_options)
+        self.data = res.result_data#ResultDymolaTextual(self.model_name[:-len('.fmu')] + '_result.txt')
 
 
     def load_expected_data(self, name):
@@ -282,17 +282,18 @@ class SimulationTest(_BaseSimOptTest):
             cvode_options = {'atol':self.abs_tol,'rtol':self.rel_tol}
         
         if isinstance(self.model, FMUModelME1) or isinstance(self.model, FMUModelME2):
-            self.model.simulate(start_time=self.start_time,
+            res = self.model.simulate(start_time=self.start_time,
                                 final_time=self.final_time,
                                 input=self.input,
                                 options={'ncp':self.ncp,
                                          'CVode_options':cvode_options})
         else:
-            self.model.simulate(start_time=self.start_time,
+            res = self.model.simulate(start_time=self.start_time,
                                 final_time=self.final_time,
                                 input=self.input,
                                 options={'ncp':self.ncp})
-
+        return res
+        
 class OptimizationTest(_BaseSimOptTest):
     """
     Base class for optimization tests.
@@ -328,7 +329,8 @@ class OptimizationTest(_BaseSimOptTest):
         """
         Run optimization and write result to file.
         """
-        self.model.optimize(options=self._opt_options)
+        res = self.model.optimize(options=self._opt_options)
+        return res
 
 
 # =========== Helper functions =============
