@@ -1,3 +1,7 @@
+================= Stable-2017-10-05 ==================
+; Feature ; Minor ; PyFMI ; #5470
+Added support to store result files on binary format.
+
 ================= Stable-2017-09-28 ==================
 ; Change ; Minor ; Build system ; #5459
 Refactored configure.ac.
